# TrabalhoIntegrado-2017

./: CMakeLists.txt  README.md  main.cpp
include/: TI.h
res/img/notas/: NotaCor.psd
res/mus/Metallica-One/: sequencia.mus  song.ini
res/shaders/: blur.frag
src/: TI.cpp
